samples/_failures_safe/1761154386_3e2d49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_798fc4ec.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_798fc4ec.c:174:9: error: expected expression at end of input
  174 |         case TOKEN_EOF: return
      |         ^~~~
./samples/SAFE/__tmp_798fc4ec.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_798fc4ec.c:174:9: error: expected declaration or statement at end of input
